<?xml version="1.0"?>
<package>
  <name>squirrel_navigation</name>
  
  <version>2.1.0</version>
  
  <description>
    Autonomous 2D navigation for the SQUIRREL robot.
  </description>
  
  <maintainer email="boniardi@cs.uni-freiburg.de">Federico Boniardi</maintainer>
  
  <license>BSD-3c</license>

  <author>Federico Boniardi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>clear_costmap_recovery</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>navfn</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>squirrel_navigation_msgs</build_depend>
  <build_depend>sbpl</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>clear_costmap_recovery</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sbpl</run_depend>
  <run_depend>squirrel_navigation_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <!-- Export the plugins -->
  <export>
    <costmap_2d plugin="${prefix}/squirrel_navigation_costmap_layers.xml"/>
    <nav_core plugin="${prefix}/squirrel_navigation_planners.xml"/>
  </export>
</package>
