<?xml version="1.0"?>
<package format="2">
  <name>squirrel_navigation</name>  
  <version>2.1.0</version>
  <description>Autonomous 2D navigation for the SQUIRREL robot.</description>
  
  <maintainer email="boniardi@cs.uni-freiburg.de">Federico Boniardi</maintainer>
  
  <license>BSD-3c</license>

  <author>Federico Boniardi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>costmap_2d</depend>
  <depend>base_local_planner</depend>
  <depend>clear_costmap_recovery</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>navfn</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sbpl</depend>
  <depend>squirrel_navigation_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <!-- Export the plugins -->
  <export>
    <costmap_2d plugin="${prefix}/squirrel_navigation_costmap_layers.xml"/>
    <nav_core plugin="${prefix}/squirrel_navigation_planners.xml"/>
  </export>
</package>
