<?xml version="1.0"?>
<package>
  <name>squirrel_pointcloud_filter</name>
  <version>1.0.0</version>
  <description>Lighter pointcloud for quick obstacle detection.</description>

  <maintainer email="boniardi@cs.uni-freiburg.de"/>

  <license>BSD-3c</license>

  <author>Federico Boniardi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>

</package>
