<?xml version="1.0"?>
<package format="2">
  <name>squirrel_pointcloud_filter</name>
  <version>1.0.0</version>
  <description>Lighter pointcloud for quick obstacle detection.</description>

  <maintainer email="boniardi@cs.uni-freiburg.de"/>

  <license>BSD-3c</license>

  <author>Federico Boniardi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

</package>
