<?xml version="1.0"?>
<package>
  <name>squirrel_pushing_planner</name>
  <version>0.1.0</version>
  <description>Service to retrieve a planner during the pushing task</description>

  <author>Federico Boniardi</author>
  <maintainer email="boniardi@cs.uni-freiburg.de">Federico Boniardi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
 
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <!--export>
  </export-->
</package>
