<?xml version="1.0"?>
<package>
  <name>squirrel_pushing_planner</name>

  <version>0.1.0</version>

  <description>Service to retrieve a planner during the pushing task</description>

  <author>Federico Boniardi</author>
  <maintainer email="boniardi@cs.uni-freiburg.de">Federico Boniardi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>map_msgs</build_depend>
  <build_depend>squirrel_rgbd_mapping_msgs</build_depend>
  <build_depend>tf</build_depend>
 
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>map_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>squirrel_rgbd_mapping_msgs</run_depend>

</package>
