<?xml version="1.0"?>
<package>
  <name>squirrel_rgbd_mapping</name>
  <version>0.2.0</version>
  <description>
    This package can be used to register the point clouds from RGBD sensors such as the kinect or stereo cameras.
    The created world model can be saved as point cloud or integrated into an octomap.
  </description>

  <maintainer email="boniardi@informatik.uni-freiburg.de">Federico Boniardi</maintainer>
  <maintainer email="endres@informatik.uni-freiburg.de">Felix Endres</maintainer>

  <license>GPLv3</license>
  <url type="website">http://ros.org/wiki/rgbdslam</url>

  <author>Felix Endres</author>
  <author>Juergen Hess</author>
  <author>Nikolas Engelhard</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cv_bridge</build_depend>
  <!-- own stuff -->
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>libg2o</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>libglew-dev</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>libg2o</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
